# batru-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.json
batru_mcp/: __init__.py  client.py  hero_lookup.py  server.py
tests/: test_smoke.py
